<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/fondo1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.MainActivity">

    <HorizontalScrollView
        android:id="@+id/hzScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgSeasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/hzScrollView"
            app:layout_constraintEnd_toEndOf="@+id/hzScrollView"
            app:layout_constraintStart_toStartOf="@+id/hzScrollView"
            app:layout_constraintBottom_toBottomOf="@+id/hzScrollView"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:id="@+id/chSeason1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_1"/>

            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:id="@+id/chSeason2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_2"/>

            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:id="@+id/chSeason3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_3"/>

            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:id="@+id/chSeason4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_4"/>

            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:id="@+id/chSeason5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_5"/>

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <Spinner
        android:id="@+id/spEpisodes"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hzScrollView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgvArrowIcon"
        android:layout_width="50dp"
        android:layout_height="38dp"
        android:padding="4dp"
        android:src="@drawable/arrow_icon"
        app:layout_constraintBottom_toBottomOf="@id/spEpisodes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/spEpisodes"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCharacters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/spEpisodes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>